Fix spacing

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -420,5 +420,12 @@ a {
     width: inherit;
 }
 
+
+
   h1, h2, h3, h4, h5 { line-height: 25px;}
+
+  .callout {
+    text-align: center;
+    font-size: 115% !important;
+  }
 }
